# groupster

./: LICENSE  README.md  pyproject.toml
src/groupster/: __init__.py  cohort.py  group.py  play.ipynb  solver.py  teambuilder.py  util.py
tests/: test_cohort.py  test_group.py  test_solver.py  test_teambuilder.py
tests/data/: _make.py  cohort.csv
